Le agregue la tabla al index.html

--- a/Rosales/index.html
+++ b/Rosales/index.html
@@ -10,7 +10,21 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
+<div> 
+  <h2>Tablita pueba</h2>
+  <table>
+	  <tr>
+		<td>Codigo</td>
+		<td>Diametro</td>
+		<td>Tipo de alambre</td>
+	  </tr>
+	  <tr>
+                <td>123456</td>
+                <td>123cm</td>
+ 		<td>Lorem Ipsum</td>
+          </tr>
+  </table>
+</div>
 <div class="container">
   <h2>Prueba de tags para hacer listas</h2>
   <ul class="list-group">
