cambie la tabla y  la pase a otr archivo e hice un link entre ambas

--- a/Rosales/index.html
+++ b/Rosales/index.html
@@ -1,23 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,21 +10,7 @@ tr:nth-child(even) {
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<div> 
-  <h2>Tablita pueba</h2>
-  <table>
-	  <tr>
-		<td>Codigo</td>
-		<td>Diametro</td>
-		<td>Tipo de alambre</td>
-	  </tr>
-	  <tr>
-                <td>123456</td>
-                <td>123cm</td>
- 		<td>Lorem Ipsum</td>
-          </tr>
-  </table>
-</div>
+
 <div class="container">
   <h2>Prueba de tags para hacer listas</h2>
   <ul class="list-group">
@@ -50,6 +19,8 @@ tr:nth-child(even) {
     <li class="list-group-item">Cualquier cosa 3</li>
   </ul>
 </div>
-
+<button>
+	<a href="tabla.html">Ir a pagina con tablita</a>
+</button>
 </body>
 </html>
