"arregle el link"

--- a/Rosales/tabla.html
+++ b/Rosales/tabla.html
@@ -45,9 +45,9 @@ tr:nth-child(even) {
     <td>Austria</td>
   </tr>
 </table>
-<button type="button">
+<button>
+	<a href="index.html">volver</a>
 </button>
-<a href="index.html">Volver</a>
 </body>
 </html>
 
